--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,8 @@
 	<script src="modules/folders/controllers/foldersController.js"></script>
 	<script src="modules/photos/controllers/addphotosController.js"></script>
 	<script src="modules/photos/tags/controllers/addtagsController.js"></script>
+	<script src="modules/core/controllers/loginController.js"></script>
+	<script src="modules/photos/controllers/photosidentController.js"></script>
 	<!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
 	</body>
 </html>
